# Test-programming

./: .pdm-python  Pipfile  pyproject.toml
Leetcode/: FindCommonCharacters.ipynb  LongestCommonPrefix.ipynb  Names.ipynb  PalindromeNumber.ipynb  RomanToInteger.ipynb  TwoSum.ipynb  TwoSum.py
Turing/: cardio-base.ipynb  covid-data.ipynb
